desgin login page

--- a/Login.html
+++ b/Login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>seller-buyer</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
@@ -18,35 +18,36 @@
         rel="stylesheet">
 </head>
 <!------------------------------------------------------Header---------------------------------------------------->
-<header>
-    <a class="navbar-brand" href="index.html">
-        <span id="bd-title">
-            <img src="images/Logo 2.png" alt="seller-buyer Logo">
-        </span>
-    </a>
-    <nav>
-        <a href="index.html"
-            style="  color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Home</a>
-        <a href="Products.html"
-            style="  color: #856404;; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Products</a>
-        <!-- <a href="https://wa.link/ygjxgs" style="  color: #856404;; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Offers</a> -->
-        <a href="aboutus.html"
-            style="  color: #856404;; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">About
-            us</a>
-        <a href="https://wa.link/ygjxgs"
-            style="  color: #856404;; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Contact
-            Us</a>
-    </nav>
-    <button id="menu-toggle" class="menu-toggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </button>
-</header>
+
 
 <body>
+    <!-- Login -->
+
+    <div class="login-container">
+        <div class="login-box">
+            <h2 style="color: #856404;">Login</h2>
+            <form>
+                <div class="input-group">
+                    <label for="email" style="color: #856404;">Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="input-group">
+                    <label for="password" style="color: #856404;">Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit" class="btn primary-btn">Sign In</button>
+                <button type="button" class="btn google-btn">Sign in with Google</button>
+            </form>
+            <div class="links">
+                <a href="#" style="color: #856404;">Create Account</a>
+                <a href="#" style="color: #856404;">Forgot Password?</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Login -->
     <!------------------------------------------------------Footer---------------------------------------------------->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="footer-col">
@@ -80,12 +81,12 @@
                                 class="fab fa-twitter"></i></a>
                         <a href="https://www.instagram.com/hopeshore_?igsh=d250enp1dTV2djFr&utm_source=qr"><i
                                 class="fab fa-instagram"></i></a>
-                        <!-- <a href="https://wa.link/ygjxgs"><i class="fab fa-linkedin-in"></i></a> -->
+                         <a href="https://wa.link/ygjxgs"><i class="fab fa-linkedin-in"></i></a> -->
                     </div>
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> 
 </body>
 
 </html>
