Login method in doned

--- a/Login.html
+++ b/Login.html
@@ -45,48 +45,15 @@
         </div>
     </div>
 
-    <!-- Login -->
-    <!------------------------------------------------------Footer---------------------------------------------------->
-    <!-- <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>Hopeshore</h4>
-                    <ul>
-                        <li><a href="aboutus.html">about us</a></li>
-                        <li><a href="aboutus.html">our services</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Pages</h4>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="Products.html">Products</a></li>
-                        <li><a href="Login.html">Login</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Contact Us</h4>
-                    <ul>
-                        <li><a href="mailto:hopeshore.in@gmail.com">hopeshore.in@gmail.com</a></li>
-                        <li><a href="tel:+918074786868">+918074786868</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>follow us</h4>
-                    <div class="social-links">
-                        <a href="https://www.facebook.com/HopeShoreKadalundi?mibextid=kFxxJD"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a href="https://x.com/HopeshoreIn?t=oJVwRHd3RBivepdB2pIB2w&s=09"><i
-                                class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/hopeshore_?igsh=d250enp1dTV2djFr&utm_source=qr"><i
-                                class="fab fa-instagram"></i></a>
-                         <a href="https://wa.link/ygjxgs"><i class="fab fa-linkedin-in"></i></a> -->
+    <!-- login -->
                     </div>
                 </div>
             </div>
         </div>
     </footer> 
+    <!-- Firebase -->
+    <script type="module" src="js/db/firebaseinit.js"></script>
+    <script type="module" src="js/db/emailauth/signIn.js"></script>
 </body>
 
 </html>
