--- a/Login.html
+++ b/Login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,30 +12,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
-<!------------------------------------------------------Header---------------------------------------------------->
-
-
 <body>
     <!-- Login -->
-
     <div class="login-container">
         <div class="login-box">
             <h2 style="color: #856404;">Login</h2>
-            <form>
+            <form id="login-form">
                 <div class="input-group">
-                    <label for="email" style="color: #856404;">Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <label for="login-email" style="color: #856404;">Email</label>
+                    <input type="email" id="login-email" name="login-email" required>
                 </div>
                 <div class="input-group">
-                    <label for="password" style="color: #856404;">Password</label>
-                    <input type="password" id="password" name="password" required>
+                    <label for="login-password" style="color: #856404;">Password</label>
+                    <input type="password" id="login-password" name="login-password" required>
                 </div>
                 <button type="submit" class="btn primary-btn">Sign In</button>
-                <button type="button" class="btn google-btn">Sign in with Google</button>
+                <button type="button" id="google-signin" class="btn google-btn">Sign in with Google</button>
             </form>
             <div class="links">
                 <a href="#" style="color: #856404;">Create Account</a>
@@ -45,15 +38,8 @@
         </div>
     </div>
 
-    <!-- login -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer> 
     <!-- Firebase -->
     <script type="module" src="js/db/firebaseinit.js"></script>
     <script type="module" src="js/db/emailauth/signIn.js"></script>
 </body>
-
 </html>
