--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 </header> 
 
 <body>
+    <button id="sign-out-button">Sign Out</button>
     <!------------------------------------------------------Footer---------------------------------------------------->
     <footer class="footer">
         <div class="container">
@@ -57,7 +58,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="Products.html">Products</a></li>
-                        <li><a href="Login.html">Login</a></li>
+
                     </ul>
                 </div>
                 <div class="footer-col">
