--- a/Login.html
+++ b/Login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/login screen.css">
     <link rel="stylesheet" href="css/font.css">
-    <link rel="icon" href="images/logo.jpg">
+    <link rel="icon" href="image/logo2.jpg ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
                 <button type="button" id="google-signin" class="btn google-btn">Sign in with Google</button>
             </form>
             <div class="links">
-                <a href="#" style="color: #856404;">Create Account</a>
+                <a href="signUp.html" style="color: #856404;">Create Account</a>
                 <a href="#" style="color: #856404;">Forgot Password?</a>
             </div>
         </div>
