--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>seller-buyer</title>
+    <title>Snaphub</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
-    <link rel="icon" href="images/logo.jpg">
+    <link rel="icon" href="image/logo2.jpg ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
@@ -20,14 +20,14 @@
 <header>
     <a class="navbar-brand" href="index.html">
         <span id="bd-title">
-            <img src="images/Logo 2.png" alt="seller-buyer Logo">
+            <a href="index.html"><img src="image/logo2.jpg" alt="seller-buyer Logo" height="92px"></a>
         </span>
     </a>
     <nav>
         <a href="index.html" style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Home</a>
         <a href="Products.html" style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Products</a>
-        <a href="aboutus.html" style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">About us</a>
-        <a href="https://wa.link/ygjxgs" style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Contact Us</a>
+        <a href="aboutus.html" style="color:    #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">About us</a>
+        <a href="#" style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Contact Us</a>
     </nav>
     <div id="auth-button-container">
         <button id="login-button" style="display: none;">Login</button>
@@ -47,7 +47,7 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col">
-                    <h4>Hopeshore</h4>
+                    <h4>seller-buyer</h4>
                     <ul>
                         <li><a href="aboutus.html">about us</a></li>
                         <li><a href="aboutus.html">our services</a></li>
@@ -64,7 +64,7 @@
                 <div class="footer-col">
                     <h4>Contact Us</h4>
                     <ul>
-                        <li><a href="mailto:hopeshore.in@gmail.com">hopeshore.in@gmail.com</a></li>
+                        <!-- <li><a href="mailto:hopeshore.in@gmail.com">hopeshore.in@gmail.com</a></li> -->
                         <li><a href="tel:+918074786868">+918074786868</a></li>
                     </ul>
                 </div>
