--- a/signUp.html
+++ b/signUp.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/signUp.css">
     <link rel="stylesheet" href="css/font.css">
-    <link rel="icon" href="images/logo.jpg">
+    <link rel="icon" href="image/logo2.jpg ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
