--- a/recover.html
+++ b/recover.html
@@ -3,43 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Password Recovery</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/login screen.css">
     <link rel="stylesheet" href="css/font.css">
-    <link rel="icon" href="image/logo2.jpg ">
+    <link rel="icon" href="image/logo2.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Login -->
+    <!-- Password Recovery -->
     <div class="login-container">
         <div class="login-box">
-            <h2 style="color: #856404;">Login</h2>
-            <form id="login-form">
+            <h2 style="color: #856404;">Password Recovery</h2>
+            <form id="recover-form">
                 <div class="input-group">
-                    <label for="login-email" style="color: #856404;">Email</label>
-                    <input type="email" id="login-email" name="login-email" required>
+                    <label for="recover-email" style="color: #856404;">Email</label>
+                    <input type="email" id="recover-email" name="recover-email" required>
                 </div>
-                <div class="input-group">
-                    <label for="login-password" style="color: #856404;">Password</label>
-                    <input type="password" id="login-password" name="login-password" required>
-                </div>
-                <button type="submit" class="btn primary-btn">Sign In</button>
-                <button type="button" id="google-signin" class="btn google-btn">Sign in with Google</button>
+                <button type="submit" class="btn primary-btn">Send Recovery Email</button>
             </form>
-            <div class="links">
-                <a href="signUp.html" style="color: #856404;">Create Account</a>
-                <a href="recover.html" style="color: #856404;">Forgot Password?</a>
-            </div>
         </div>
     </div>
 
     <!-- Firebase -->
     <script type="module" src="js/db/firebaseinit.js"></script>
-    <script type="module" src="js/db/emailauth/signIn.js"></script>
+    <script type="module" src="js/db/emailauth/recover.js"></script>
 </body>
 </html>
