--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snaphub</title>
+    <title>Responsive Navigation</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/font.css">
-    <link rel="icon" href="image/logo2.jpg ">
+    <link rel="icon" href="image/logo2.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
@@ -16,75 +16,85 @@
         href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 </head>
-<!------------------------------------------------------Header---------------------------------------------------->
-<header>
-    <a class="navbar-brand" href="index.html">
-        <span id="bd-title">
-            <a href="index.html"><img src="image/logo2.jpg" alt="seller-buyer Logo" height="92px"></a>
-        </span>
-    </a>
-    <nav>
-        <a href="index.html" style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Home</a>
-        <a href="Products.html" style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Products</a>
-        <a href="aboutus.html" style="color:    #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">About us</a>
-        <a href="#" style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Contact Us</a>
-    </nav>
-    <div id="auth-button-container">
-        <button id="login-button" style="display: none;">Login</button>
-        <img id="profile-icon" src="images/profile-icon.png" alt="Profile Icon" style="display: none;">
-    </div>
-    <button id="menu-toggle" class="menu-toggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-    </button>
-</header> 
 
 <body>
-    <button id="sign-out-button">Sign Out</button>
-    <!------------------------------------------------------Footer---------------------------------------------------->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>seller-buyer</h4>
-                    <ul>
-                        <li><a href="aboutus.html">about us</a></li>
-                        <li><a href="aboutus.html">our services</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Pages</h4>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="Products.html">Products</a></li>
+    <header>
+        <button id="menu-toggle" class="menu-toggle">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">
+            <span id="bd-title">
+                <a href="index.html"><img src="image/logo2.jpg" alt="seller-buyer Logo" height="92px"></a>
+            </span>
+        </a>
+        <nav>
+            <a href="index.html"
+                style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Home</a>
+            <a href="Products.html"
+                style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Products</a>
+            <!-- <a href="aboutus.html"
+                style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">About
+                us</a>
+            <a href="#"
+                style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Contact
+                Us</a> -->
+            <div id="auth-button-container">
+                <button id="login-button" style="display: none;">Login</button>
+                <img id="profile-icon" src="images/profile-icon.png" alt="Profile Icon" style="display: none;">
+            </div>
+        </nav>
 
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Contact Us</h4>
-                    <ul>
-                        <!-- <li><a href="mailto:hopeshore.in@gmail.com">hopeshore.in@gmail.com</a></li> -->
-                        <li><a href="tel:+918074786868">+918074786868</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>follow us</h4>
-                    <div class="social-links">
-                        <a href="https://www.facebook.com/HopeShoreKadalundi?mibextid=kFxxJD"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a href="https://x.com/HopeshoreIn?t=oJVwRHd3RBivepdB2pIB2w&s=09"><i
-                                class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/hopeshore_?igsh=d250enp1dTV2djFr&utm_source=qr"><i
-                                class="fab fa-instagram"></i></a>
-                        <!-- <a href="https://wa.link/ygjxgs"><i class="fab fa-linkedin-in"></i></a> -->
+    </header>
+
+    <body>
+        <button id="sign-out-button">Sign Out</button>
+        <!------------------------------------------------------Footer---------------------------------------------------->
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col">
+                        <h4>seller-buyer</h4>
+                        <ul>
+                            <li><a href="aboutus.html">about us</a></li>
+                            <li><a href="aboutus.html">our services</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>Pages</h4>
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="Products.html">Products</a></li>
+
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>Contact Us</h4>
+                        <ul>
+                            <!-- <li><a href="mailto:hopeshore.in@gmail.com">hopeshore.in@gmail.com</a></li> -->
+                            <li><a href="tel:+918074786868">+918074786868</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4>follow us</h4>
+                        <div class="social-links">
+                            <a href="https://www.facebook.com/HopeShoreKadalundi?mibextid=kFxxJD"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a href="https://x.com/HopeshoreIn?t=oJVwRHd3RBivepdB2pIB2w&s=09"><i
+                                    class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/hopeshore_?igsh=d250enp1dTV2djFr&utm_source=qr"><i
+                                    class="fab fa-instagram"></i></a>
+                            <!-- <a href="https://wa.link/ygjxgs"><i class="fab fa-linkedin-in"></i></a> -->
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
-    <script src="js/Script.js"></script>
-    <script type="module" src="js/db/emailauth/authState.js"></script>
-</body>
+        </footer>
+        <script src="js/Script.js"></script>
+        <script type="module" src="js/db/emailauth/authState.js"></script>
+    </body>
 
 </html>
