Search bar created

--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
 
     </header>
 
-    <body>
+    <div class="search-container">
+        <input type="text" id="search-bar" placeholder="Search...">
+        <button id="search-button"><i class="fas fa-search"></i></button>
+    </div>
+
+
         <button id="sign-out-button">Sign Out</button>
         <!------------------------------------------------------Footer---------------------------------------------------->
         <footer class="footer">
