--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,51 +11,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap" rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header>
-        <button id="menu-toggle" class="menu-toggle">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">
-            <span id="bd-title">
-                <a href="index.html"><img src="image/logo2.jpg" alt="seller-buyer Logo" height="92px"></a>
-            </span>
-        </a>
-        <nav>
-            <a href="index.html"
-                style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Home</a>
-            <a href="Products.html"
-                style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Products</a>
-            <!-- <a href="aboutus.html"
-                style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">About
-                us</a>
-            <a href="#"
-                style="color: #856404; font-family: 'Roboto', sans-serif; font-weight: 500; font-style: normal;">Contact
-                Us</a> -->
-            <div id="auth-button-container">
-                <button id="login-button" style="display: none;">Login</button>
-                <img id="profile-icon" src="images/profile-icon.png" alt="Profile Icon" style="display: none;">
+        <div class="top-bar">
+            <a class="navbar-brand" href="index.html">
+                <img src="image/logo2.jpg" alt="seller-buyer Logo">
+            </a>
+            <div class="search-container">
+                <input type="text" id="search-bar" placeholder="Search...">
+                <button id="search-button"><i class="fas fa-search"></i></button>
             </div>
-        </nav>
-
+            <div id="auth-button-container">
+                <a href="Login.html"><button id="login-button">Login</button></a>
+                <button id="sign-out-button" style="display: none;">Sign Out</button>
+                <img id="profile-icon" src="images/profile-icon.png" alt="Profile Icon" style="display: none;">
+                <button id="cart-button"><i class="fas fa-shopping-cart"></i></button>
+            </div>
+        </div>
     </header>
 
-    <div class="search-container">
-        <input type="text" id="search-bar" placeholder="Search...">
-        <button id="search-button"><i class="fas fa-search"></i></button>
-    </div>
-
-
-        <button id="sign-out-button">Sign Out</button>
         <!------------------------------------------------------Footer---------------------------------------------------->
         <footer class="footer">
             <div class="container">
