--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="auth-button-container">
                 <a href="Login.html"><button id="login-button">Login</button></a>
                 <button id="sign-out-button" style="display: none;">Sign Out</button>
-                <img id="profile-icon" src="images/profile-icon.png" alt="Profile Icon" style="display: none;">
+                <a href="profile.html"><img id="profile-icon" src="image/Icons/profile icon.png" alt="Profile Icon" style="display: none;"></a>
                 <button id="cart-button"><i class="fas fa-shopping-cart"></i></button>
             </div>
         </div>
