--- a/profile.html
+++ b/profile.html
@@ -90,8 +90,8 @@
                         <label for="locality">Locality:</label>
                         <input type="text" id="locality" name="locality" required><br>
                         
-                        <label for="address">Address:</label>
-                        <textarea id="address" name="address" required></textarea><br>
+                        <label for="address-address">Address:</label>
+                        <input type="text" id="address-address" name="address-address" required><br>
                         
                         <label for="city">City/District/Taluk:</label>
                         <input type="text" id="city" name="city" required><br>
